Fix underline alignment in What is 4Runr section

--- a/src/app/styles/what-is-4runr.css
+++ b/src/app/styles/what-is-4runr.css
@@ -56,17 +56,22 @@
   min-width: calc(180 / 1920 * 100vw);
   position: relative;
   padding-bottom: calc(2 / 1920 * 100vw);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .heading::after {
   content: '';
   position: absolute;
   bottom: 0;
-  left: 50%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
   width: 0;
   height: calc(1 / 1920 * 100vw);
   background: linear-gradient(90deg, rgba(106, 90, 205, 0) 0%, rgba(106, 90, 205, 0.8) 50%, rgba(106, 90, 205, 0) 100%);
-  transform: translateX(-50%);
   transition: all 300ms ease-in-out;
   box-shadow: 0 calc(2 / 1920 * 100vw) calc(3 / 1920 * 100vw) rgba(106, 90, 205, 0.6);
   opacity: 0;
